--- a/sass/style.scss
+++ b/sass/style.scss
@@ -21,6 +21,7 @@ body {
     box-shadow: 2px 0px 4px rgba(0, 0, 0, 0.6);
     transition: width .35s;
     .close-btn {
+        cursor: pointer;
         display: flex;
         flex-direction: row-reverse;
         width: 100%;
@@ -76,6 +77,7 @@ body {
 .navbar {
     width: 100%;
     z-index: 1;
+    padding: 10px 20px;
     .nav-box {
         display: flex;
         flex-direction: row;
@@ -234,7 +236,131 @@ main {
 
     #about {
         background-color: #161616;
-        height: 100vh;
+        padding: 100px 0;
+        .self-info, .self-img {
+            margin: 20px 0;
+        }
+        .self-img {
+            display: flex;
+            justify-content: center;
+        }
+        .self-info {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            .heading {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                h6 {
+                    margin: 0;
+                    text-transform: uppercase;
+                    color: $color-primary;
+                    font-weight: 500;
+                    letter-spacing: 1px;
+                }
+                span {
+                    margin: 0 10px;
+                    background-color: $color-primary;
+                    width: 40px;
+                    height: 1px
+                }
+            }
+
+            .bio {
+                h1 {
+                    color: white;
+                    text-transform: uppercase;
+                    margin: 20px 0;
+                    letter-spacing: 1px;
+                }
+                p {
+                    color: #b1b1b1;
+                    letter-spacing: 1px;
+                }
+            }
+        }
+    }
+
+    #services {
+        background-color: #131313;
+        padding: 100px 0;
+
+        .heading {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            h6 {
+                margin: 0;
+                text-transform: uppercase;
+                color: $color-primary;
+                font-weight: 500;
+                letter-spacing: 1px;
+            }
+            span {
+                margin: 0 10px;
+                background-color: $color-primary;
+                width: 40px;
+                height: 1px
+            }
+        }
+
+        h2 {
+            color: white;
+            text-transform: uppercase;
+            margin: 20px 0;
+            letter-spacing: 1.5px;
+            text-align: center;
+        }
+
+        .service-card {
+            padding: 20px 0;
+            display: flex;
+            justify-content: center;
+
+            .card {
+                width: 90%;
+                border-radius: 0;
+                padding: 0;
+                overflow: hidden;
+                background-color: #131313;
+                box-shadow: -2px -2px 15px black;
+
+                .card-title {
+                    padding: 20px 35px;
+                    h3 {
+                        color: #fff;
+                        font-size: 20px;
+                        position: relative;
+                        z-index: 2;
+
+                        &::before {
+                            content: "";
+                            width: 40px;
+                            height: 40px;
+                            top: -10px;
+                            left: -10px;
+                            z-index: -1;
+                            opacity: 0.7;
+                            position: absolute;
+                            background-color: $color-primary;
+                            border-radius: 20px;
+                        }
+                    }
+                }
+
+                .card-img {
+                    transition: transform .2s;
+                }
+
+                &:hover {
+                    .card-img {
+                        transform: scale(1.1);
+                    }
+                }
+            }
+        }
     }
 }
 
