--- a/sass/style.css
+++ b/sass/style.css
@@ -3,8 +3,7 @@
 }
 
 body {
-  margin: 0px;
-  padding: 0px;
+  background-color: #000;
 }
 
 #sidebar {
@@ -96,8 +95,11 @@ body {
 
 .navbar {
   width: 100%;
-  z-index: 1;
+  z-index: 999;
   padding: 10px 20px;
+  background-color: transparent;
+  -webkit-transition: all 0.2s linear;
+  transition: all 0.2s linear;
 }
 
 .navbar .nav-box {
@@ -114,7 +116,7 @@ body {
 }
 
 .navbar .nav-box .navbar-brand {
-  font-size: 2rem;
+  font-size: 1.8rem;
   color: #fff;
   position: relative;
 }
@@ -141,6 +143,10 @@ body {
   margin: 8px 0;
 }
 
+.scroll {
+  background-color: #000;
+}
+
 #content {
   width: 100vw;
   height: 100vh;
@@ -152,32 +158,16 @@ body {
   -webkit-transform-style: preserve-3d;
 }
 
-header .parallax {
-  width: 100vw;
-  height: 100vh;
-  position: relative;
-  transform-style: preserve-3d;
-  -webkit-transform-style: preserve-3d;
-}
-
-header .parallax::after {
+header {
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.6)), to(rgba(0, 0, 0, 0.6))), url("../images/bg.jpg");
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../images/bg.jpg");
-  background-repeat: no-repeat;
+  background-attachment: fixed;
   background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  right: 0px;
-  bottom: 0px;
-  z-index: -1;
-  content: "";
-  transform: translateZ(-1px) scale(1);
-  -webkit-transform: translateZ(-1px) scale(2);
 }
 
-header .parallax .container {
+header .container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -194,7 +184,7 @@ header .parallax .container {
   height: 100vh;
 }
 
-header .parallax .container .title h5 {
+header .container .title h5 {
   color: #d7b474;
   font-weight: 300;
   margin: 20px 0;
@@ -203,7 +193,7 @@ header .parallax .container .title h5 {
   font-weight: 400;
 }
 
-header .parallax .container .title h1 {
+header .container .title h1 {
   color: white;
   font-size: 4rem;
   text-transform: uppercase;
@@ -213,11 +203,11 @@ header .parallax .container .title h1 {
   text-align: center;
 }
 
-header .parallax .container .btn-container {
+header .container .btn-container {
   margin: 30px 0;
 }
 
-header .parallax .container .btn-container button {
+header .container .btn-container button {
   display: inline-block;
   margin: 0 10px 20px;
   border: 1px solid white;
@@ -232,29 +222,29 @@ header .parallax .container .btn-container button {
   overflow: hidden;
 }
 
-header .parallax .container .btn-container button:before {
+header .container .btn-container button:before {
   content: '';
   display: block;
   position: absolute;
   background-color: #d7b474;
 }
 
-header .parallax .container .btn-container button span {
+header .container .btn-container button span {
   position: relative;
   z-index: 1;
 }
 
-header .parallax .container .btn-container button:focus {
+header .container .btn-container button:focus {
   -webkit-box-shadow: none;
           box-shadow: none;
 }
 
-header .parallax .container .btn-container .btn {
-  -webkit-transition: background 0.15s, color 0.25s;
-  transition: background 0.15s, color 0.25s;
+header .container .btn-container .btn {
+  -webkit-transition: background 0.15s;
+  transition: background 0.15s;
 }
 
-header .parallax .container .btn-container .btn:before {
+header .container .btn-container .btn:before {
   top: 0;
   left: 0;
   right: 0;
@@ -267,21 +257,13 @@ header .parallax .container .btn-container .btn:before {
   transition: all 0.25s ease-out;
 }
 
-header .parallax .container .btn-container .btn:hover {
-  color: #fff;
+header .container .btn-container .btn:hover {
   border: 1px solid #d7b474;
 }
 
-header .parallax .container .btn-container .btn:hover:before {
+header .container .btn-container .btn:hover:before {
   -webkit-transform: scale(1) translateZ(0);
           transform: scale(1) translateZ(0);
-}
-
-main {
-  height: 100%;
-  width: 100%;
-  perspective: 2px;
-  -webkit-perspective: 2px;
 }
 
 main #about {
@@ -537,13 +519,291 @@ main #portfolio .gallery-card .card .search-icon {
 }
 
 main #portfolio .gallery-card .card:hover .card-img {
-  opacity: 0.3;
+  opacity: 0.2;
   -webkit-transform: scale(1);
           transform: scale(1);
 }
 
 main #portfolio .gallery-card .card:hover .search-icon {
   display: block;
+}
+
+main #testimonial .parallax {
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.6)), to(rgba(0, 0, 0, 0.6))), url("../images/facial.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../images/facial.jpg");
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+main #testimonial .parallax .container {
+  padding: 100px 10px;
+}
+
+main #testimonial .parallax .container .heading {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-left: 5px;
+}
+
+main #testimonial .parallax .container .heading h6 {
+  margin: 0;
+  text-transform: uppercase;
+  color: #d7b474;
+  font-weight: 500;
+  letter-spacing: 1px;
+}
+
+main #testimonial .parallax .container .heading span {
+  margin: 0 10px;
+  background-color: #d7b474;
+  width: 40px;
+  height: 1px;
+}
+
+main #testimonial .parallax .container h1 {
+  color: white;
+  margin-bottom: 30px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-left: 5px;
+}
+
+main #testimonial .parallax .container p {
+  color: white;
+}
+
+main #testimonial .parallax .container .card {
+  border: none;
+  background-color: transparent;
+}
+
+main #testimonial .parallax .container .card .card-body {
+  padding: 0 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+main #testimonial .parallax .container .card .card-body .card-title {
+  color: #d7b474;
+  font-size: 22px;
+}
+
+main #testimonial .parallax .container .card .card-body .card-text {
+  color: white;
+  text-align: center;
+  font-size: 20px;
+}
+
+main #testimonial .parallax .container .card .card-footer {
+  color: white;
+  border: none;
+  text-align: center;
+}
+
+main #contact {
+  background-color: #161616;
+  padding: 100px 0;
+}
+
+main #contact .heading {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+main #contact .heading h6 {
+  margin: 0;
+  text-transform: uppercase;
+  color: #d7b474;
+  font-weight: 500;
+  letter-spacing: 1px;
+}
+
+main #contact .heading span {
+  margin: 0 10px;
+  background-color: #d7b474;
+  width: 40px;
+  height: 1px;
+}
+
+main #contact h1 {
+  color: white;
+  text-transform: uppercase;
+  margin: 20px 0 35px;
+  letter-spacing: 1.5px;
+  text-align: center;
+}
+
+main #contact .google-map {
+  margin: 30px 0;
+}
+
+main #contact .contact-form input[type="text"], main #contact .contact-form input[type="email"], main #contact .contact-form textarea {
+  background-color: #1c1c1c;
+  border: none;
+  border-radius: 0;
+  color: peachpuff;
+  font-size: 16px;
+  font-weight: 400;
+  letter-spacing: 1px;
+  padding: 15px 20px;
+  margin-bottom: 20px;
+}
+
+main #contact .contact-form input[type="text"]:focus, main #contact .contact-form input[type="email"]:focus, main #contact .contact-form textarea:focus {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+main #contact .contact-form button {
+  border-radius: 0;
+  border: 1px solid white;
+  padding: 10px 40px;
+  color: #fff;
+  margin-top: 10px;
+}
+
+main #contact .contact-form .btn {
+  background-color: none;
+  -webkit-transition: background-color 0.2s, -webkit-transform 0.2s ease-in;
+  transition: background-color 0.2s, -webkit-transform 0.2s ease-in;
+  transition: background-color 0.2s, transform 0.2s ease-in;
+  transition: background-color 0.2s, transform 0.2s ease-in, -webkit-transform 0.2s ease-in;
+}
+
+main #contact .contact-form .btn:focus {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+main #contact .contact-form .btn:hover {
+  border: 1px solid #d7b474;
+  background-color: #d7b474;
+  -webkit-transform: translateY(-10px);
+          transform: translateY(-10px);
+}
+
+footer {
+  padding: 100px 0;
+}
+
+footer h3 {
+  color: #fff;
+  font-weight: 400;
+  font-family: 'Poppins', sans-serif;
+  letter-spacing: 1px;
+  font-size: 1.8rem;
+  position: relative;
+  margin: 0 10px 25px;
+}
+
+footer h3::before {
+  content: "";
+  width: 50px;
+  height: 50px;
+  top: -10px;
+  left: -10px;
+  position: absolute;
+  z-index: -1;
+  background-color: #d7b474;
+  border-radius: 25px;
+}
+
+footer h4 {
+  color: #fff;
+  font-family: 'Poppins', sans-serif;
+  letter-spacing: 1px;
+  margin: 10px 0 10px;
+}
+
+footer .contact-media {
+  margin-bottom: 20px;
+}
+
+footer .contact-media .media-icon {
+  width: 40px;
+  height: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: 1px solid white;
+  color: white;
+  border-radius: 20px;
+  margin: 5px;
+  background-color: transparent;
+  -webkit-transition: background-color 0.3s ease;
+  transition: background-color 0.3s ease;
+}
+
+footer .contact-media .media-icon:hover {
+  background-color: #d7b474;
+  border-color: #d7b474;
+}
+
+footer .contact-info .row {
+  padding: 5px;
+  color: white;
+}
+
+footer .contact-info .row span {
+  color: #d7b474;
+  display: inline-block;
+  margin-right: 15px;
+}
+
+@media (min-width: 850px) {
+  #testimonial .parallax .container .card {
+    padding: 50px;
+  }
+}
+
+@media (max-width: 600px) {
+  #testimonial .parallax .container {
+    padding: 0;
+  }
+  #testimonial .parallax .container .card {
+    padding: 0;
+  }
+  #testimonial .parallax .container .card .card-body {
+    padding: 0;
+  }
 }
 
 @media (max-width: 420px) {
