--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,8 +5,7 @@ $color-primary : #d7b474;
 }
 
 body {
-    margin: 0px;
-    padding: 0px;
+    background-color: #000;
 }
 
 #sidebar {
@@ -76,15 +75,18 @@ body {
 
 .navbar {
     width: 100%;
-    z-index: 1;
+    z-index: 999;
     padding: 10px 20px;
+    background-color: transparent;
+    transition: all 0.2s linear;
+
     .nav-box {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
 
         .navbar-brand {
-            font-size: 2rem;
+            font-size: 1.8rem;
             color: #fff;
             position: relative;
             &::before {
@@ -110,6 +112,10 @@ body {
     }
 }
 
+.scroll {
+    background-color: #000;
+}
+
 #content {
     width: 100vw;
 	height: 100vh;
@@ -122,117 +128,94 @@ body {
 }
 
 header {
-    .parallax {
-        width: 100vw;
-        height: 100vh;
-        position: relative;
-        transform-style: preserve-3d;
-        -webkit-transform-style: preserve-3d;
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), 
+                url("../images/bg.jpg");
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 
-        &::after {
-            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), 
-                        url("../images/bg.jpg");
-            background-repeat: no-repeat;
-            background-position: center;
-            background-size: cover;
-            position: absolute;
-            top: 0px;
-            left: 0px;
-            right: 0px;
-            bottom: 0px;
-            z-index: -1;
-            content: "";
-            transform: translateZ(-1px) scale(1);
-            -webkit-transform: translateZ(-1px) scale(2);
+    .container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+
+        .title {
+            h5 {
+                color: $color-primary;
+                font-weight: 300;
+                margin: 20px 0;
+                text-transform: uppercase;
+                text-align: center;
+                font-weight: 400;
+            }
+            h1 {
+                color: white;
+                font-size: 4rem;
+                text-transform: uppercase;
+                letter-spacing: 1px;
+                line-height: 74px;
+                font-family: 'Poppins', sans-serif;
+                text-align: center;
+            }
         }
 
-        .container {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+        .btn-container {
+            margin: 30px 0;
 
-            .title {
-                h5 {
-                    color: $color-primary;
-                    font-weight: 300;
-                    margin: 20px 0;
-                    text-transform: uppercase;
-                    text-align: center;
-                    font-weight: 400;
+            button {
+                display: inline-block;
+                margin: 0 10px 20px; 
+                border: 1px solid white;
+                border-radius: 0%;
+                color: #fff;
+                letter-spacing: 1px;
+                text-transform: uppercase;
+                font-size: 18px;
+                text-decoration: none;
+                padding: 15px 40px;
+                position: relative;
+                overflow: hidden;
+                &:before {
+                    content: '';
+                    display: block;
+                    position: absolute;
+                    background-color: $color-primary;
                 }
-                h1 {
-                    color: white;
-                    font-size: 4rem;
-                    text-transform: uppercase;
-                    letter-spacing: 1px;
-                    line-height: 74px;
-                    font-family: 'Poppins', sans-serif;
-                    text-align: center;
-                }
-            }
-
-            .btn-container {
-                margin: 30px 0;
-
-                button {
-                    display: inline-block;
-                    margin: 0 10px 20px; 
-                    border: 1px solid white;
-                    border-radius: 0%;
-                    color: #fff;
-                    letter-spacing: 1px;
-                    text-transform: uppercase;
-                    font-size: 18px;
-                    text-decoration: none;
-                    padding: 15px 40px;
+                span {
                     position: relative;
-                    overflow: hidden;
-                    &:before {
-                        content: '';
-                        display: block;
-                        position: absolute;
-                        background-color: $color-primary;
-                    }
-                    span {
-                        position: relative;
-                        z-index: 1;
-                    }
-                    &:focus {
-                        box-shadow: none;
-                    }
+                    z-index: 1;
                 }
-
-                .btn {
-                    transition: background 0.15s, color 0.25s;
-                    &:before {
-                        top: 0;
-                        left: 0;
-                        right: 0;
-                        bottom: 0;
-                        transform-origin: center; //this is the magic
-                        transform: scale(1, 0) translateZ(0);
-                        transition: all 0.25s ease-out;
-                    }
-                    &:hover {
-                        color: #fff;
-                        border: 1px solid $color-primary;
-                        &:before { transform: scale(1) translateZ(0); }
-                    }
+                &:focus {
+                    box-shadow: none;
                 }
-
-                
             }
+
+            .btn {
+                transition: background 0.15s;
+                &:before {
+                    top: 0;
+                    left: 0;
+                    right: 0;
+                    bottom: 0;
+                    transform-origin: center; //this is the magic
+                    transform: scale(1, 0) translateZ(0);
+                    transition: all 0.25s ease-out;
+                }
+                &:hover {
+                    border: 1px solid $color-primary;
+                    &:before { transform: scale(1) translateZ(0); }
+                }
+            }
+
+            
         }
     }
 }
 
 main {
-    height: 100%;
-    width: 100%;
-	perspective: 2px;
-	-webkit-perspective: 2px;
 
     #about {
         background-color: #161616;
@@ -427,12 +410,260 @@ main {
 
                 &:hover {
                     .card-img {
-                        opacity: 0.3;
+                        opacity: 0.2;
                         transform: scale(1);
                     }
 
                     .search-icon {
                         display: block;
+                    }
+                }
+            }
+        }
+    }
+
+    #testimonial {
+        .parallax {
+            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), 
+                url("../images/facial.jpg");
+            background-attachment: fixed;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+
+            .container {
+                padding: 100px 10px;
+
+                .heading {
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    margin-left: 5px;
+                    h6 {
+                        margin: 0;
+                        text-transform: uppercase;
+                        color: $color-primary;
+                        font-weight: 500;
+                        letter-spacing: 1px;
+                    }
+                    span {
+                        margin: 0 10px;
+                        background-color: $color-primary;
+                        width: 40px;
+                        height: 1px
+                    }
+                }
+                h1 {
+                    color: white;
+                    margin-bottom: 30px;
+                    text-transform: uppercase;
+                    letter-spacing: 1px;
+                    margin-left: 5px;
+                }
+
+                p {
+                    color: white;
+                }
+
+                .card {
+                    border: none;
+                    background-color: transparent;
+                    .card-body {
+                        padding: 0 50px;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+                        align-items: center;
+
+                        .card-title {
+                            color: $color-primary;
+                            font-size: 22px;
+                        }
+
+                        .card-text {
+                            color: white;
+                            text-align: center;
+                            font-size: 20px;
+                        }
+                    }
+
+                    .card-footer {
+                        color: white;
+                        border: none;
+                        text-align: center;
+                    }
+                }
+            }
+        }
+    }
+
+    #contact {
+        background-color: #161616;
+        padding: 100px 0;
+
+        .heading {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            h6 {
+                margin: 0;
+                text-transform: uppercase;
+                color: $color-primary;
+                font-weight: 500;
+                letter-spacing: 1px;
+            }
+            span {
+                margin: 0 10px;
+                background-color: $color-primary;
+                width: 40px;
+                height: 1px
+            }
+        }
+
+        h1 {
+            color: white;
+            text-transform: uppercase;
+            margin: 20px 0 35px;
+            letter-spacing: 1.5px;
+            text-align: center;
+        }
+
+        .google-map {
+            margin: 30px 0
+        }
+
+        .contact-form {
+
+            input[type="text"], input[type="email"], textarea {
+                background-color: #1c1c1c;
+                border: none;
+                border-radius: 0;
+                color: peachpuff;
+                font-size: 16px;
+                font-weight: 400;
+                letter-spacing: 1px;
+                padding: 15px 20px;
+                margin-bottom: 20px;
+
+                &:focus {
+                    box-shadow: none;
+                }
+            }
+
+            button {
+                border-radius: 0;
+                border: 1px solid white;
+                padding: 10px 40px;
+                color: #fff;
+                margin-top: 10px;
+            }
+            .btn {
+                background-color: none;
+                transition: background-color 0.2s, transform 0.2s ease-in;
+
+                &:focus {
+                    box-shadow: none;
+                }
+
+                &:hover {
+                    border: 1px solid $color-primary;
+                    background-color: $color-primary;
+                    transform: translateY(-10px);
+                }
+            }
+        }
+    }
+}
+
+footer {
+    padding: 100px 0;
+
+    h3 {
+        color: #fff;
+        font-weight: 400;
+        font-family: 'Poppins', sans-serif;
+        letter-spacing: 1px;
+        font-size: 1.8rem;
+        position: relative;
+        margin: 0 10px 25px;
+
+            &::before {
+                content: "";
+                width: 50px;
+                height: 50px;
+                top: -10px;
+                left: -10px;
+                position: absolute;
+                z-index: -1;
+                background-color: $color-primary;
+                border-radius: 25px;
+            }
+    }
+
+    h4 {
+        color: #fff;
+        font-family: 'Poppins', sans-serif;
+        letter-spacing: 1px;
+        margin: 10px 0 10px;
+    }
+
+    .contact-media {
+        margin-bottom: 20px;
+        .media-icon {
+            width: 40px;
+            height: 40px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border: 1px solid white;
+            color: white;
+            border-radius: 20px;
+            margin: 5px;
+            background-color: transparent;
+            transition: background-color 0.3s ease;
+
+            &:hover {
+                background-color: $color-primary;
+                border-color: $color-primary;
+            }
+        }
+    }
+
+    .contact-info {
+        .row {
+            padding: 5px;
+            color: white;
+            span {
+                color: $color-primary;
+                display: inline-block;
+                margin-right: 15px;
+            }
+        }
+    }
+}
+
+@media (min-width: 850px) {
+    #testimonial {
+        .parallax {
+            .container {
+                .card {
+                    padding: 50px
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 600px) {
+    #testimonial {
+        .parallax {
+            .container {
+                padding: 0;
+                .card {
+                    padding: 0;
+                    .card-body {
+                        padding: 0;
                     }
                 }
             }
