--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,6 +8,10 @@ body {
     background-color: #000;
 }
 
+a {
+    text-decoration: none;
+}
+
 #sidebar {
     overflow: auto;
     height: 100vh;
@@ -420,6 +424,26 @@ main {
                 }
             }
         }
+
+        .modal {
+            .modal-content {
+                background-color: transparent;
+                border: none;
+                .modal-header {
+                    border: none;
+                    .btn-close {
+                        background-color: #fff;
+                        border-radius: 50%;
+                        padding: 10px;
+                    }
+                }
+                .modal-body {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+            }
+        }
     }
 
     #testimonial {
@@ -577,7 +601,14 @@ main {
 }
 
 footer {
-    padding: 100px 0;
+    padding: 100px 0 10px;
+
+    .self-2 {
+        width: 220px;
+        border-radius: 50%;
+        margin-bottom: 50px;
+        vertical-align: middle;
+    }
 
     h3 {
         color: #fff;
@@ -601,21 +632,26 @@ footer {
             }
     }
 
+    p {
+        color: white;
+        font-size: 18px;
+    }
+
     h4 {
         color: #fff;
         font-family: 'Poppins', sans-serif;
         letter-spacing: 1px;
-        margin: 10px 0 10px;
+        margin: 0px 0 10px;
     }
 
     .contact-media {
-        margin-bottom: 20px;
         .media-icon {
             width: 40px;
             height: 40px;
             display: flex;
             justify-content: center;
             align-items: center;
+            text-decoration: none;
             border: 1px solid white;
             color: white;
             border-radius: 20px;
@@ -633,11 +669,13 @@ footer {
     .contact-info {
         .row {
             padding: 5px;
-            color: white;
-            span {
-                color: $color-primary;
-                display: inline-block;
-                margin-right: 15px;
+            a {
+                color: white;
+                span {
+                    color: $color-primary;
+                    display: inline-block;
+                    margin-right: 15px;
+                }
             }
         }
     }
@@ -665,6 +703,15 @@ footer {
                     .card-body {
                         padding: 0;
                     }
+                }
+            }
+        }
+    }
+
+    #portfolio {
+        .modal {
+            .modal-content {
+                .modal-body {
                 }
             }
         }
